--- a/index.html
+++ b/index.html
@@ -17,15 +17,35 @@
 
 <body id="app">
     <h1>To-do-Liste</h1>
+    <h2>
+        <div class="btn-group">
+            <button type="button" class="btn btn-info">Action</button>
+            <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#"><input type="text" placeholder="add a new list"
+                            v-model="toDoInput" @change="newInput">
+                    </a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+        </div>
+    </h2>
     <input type="text" placeholder="input your stuff to-do here" v-model="toDoInput" @change="newInput">
     <ul class="list-group list-group-flush">
-        <p style="margin: 35px" v-if="lazyGuy"> unfinished tasks: </p>
+        <h2 style="margin: 35px" v-if="lazyGuy"> unfinished tasks: </h2>
         <li class="list-group-item" v-for="(item,index) in list" :key="index">
             <input class="bi bi-check2-square" type="checkbox" v-model="item.checked" @change="taskDone(item,index)">
             {{item.text}}
         </li>
 
-        <p style="margin: 35px" v-if=" hardWorking">finished tasks: </p>
+        <h2 style="margin: 35px" v-if=" hardWorking">finished tasks: </h2>
 
         <li class="list-group-item" v-for="(doneItem, index) in doneList" :key="index">
             <input class="bi bi-check2-square" type="checkbox" v-model="doneItem.checked"
@@ -33,16 +53,19 @@
             {{doneItem.text}}
         </li>
     </ul>
-    <button class="btn btn-primary" type="button" @click="saveTasks"><i class="bi bi-floppy"></i></button>
-    <button class="btn btn-secondary" type="button" @click="getTasks"><i class="bi bi-download"></i></button>
+    <button style="margin: 100px;" class="btn btn-primary" type="button" @click="saveTasks"><i
+            class="bi bi-floppy"></i></button>
+    <button style="margin: 100px;" class="btn btn-secondary" type="button" @click="getTasks"><i
+            class="bi bi-download"></i></button>
 
 
     <button v-if="hardWorking" style="margin: 100px;" class=" btn btn-success" @click="deleteDone"><i
             class="bi bi-trash3"></i>delete
         finished tasks</button>
-    <button style="margin: 100px;" class="btn btn-danger" @click="deleteNotDone"><i class="bi bi-trash3"></i>
+    <button v-if="lazyGuy" style="margin: 100px;" class="btn btn-danger" @click="deleteNotDone"><i
+            class="bi bi-trash3"></i>
         delete unfinished tasks </button>
-
+    <!-- Example split danger button -->
 
 
 </body>
