--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 </head>
 
 <body id="app">
-    <h1>To-do-Liste</h1>
+    <h1>To-do-List</h1>
+    <!--  <h3 v-if="showListComp"> {{ storageItem.anotherToDoList }} </h3> -->
     <h2>
         <div class="btn-group">
-            <button type="button" class="btn btn-info">Action</button>
+            <button type="button" class="btn btn-info">LISTS</button>
             <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
-                aria-expanded="false">
+                aria-expanded="false" @click="getLists">
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu" @click.stop>
@@ -35,6 +36,7 @@
                     :key="index">
                     {{ storageItem.anotherToDoList }}
                 </li>
+                </li>
                 <li><a class="dropdown-item"
                         href="https://media.makeameme.org/created/you-guessed-right-5c78be.jpg">Something else here</a>
                 </li>
@@ -42,22 +44,22 @@
                     <hr class="dropdown-divider">
                 </li>
                 <li @click="deleteToDoLists"><a class="dropdown-item">delete all lists</a></li>
+
             </ul>
         </div>
     </h2>
-
-
     <input type="text" placeholder="input your stuff to-do here" v-model="toDoInput" @change="newInput">
     <ul class="list-group list-group-flush">
         <h2 style="margin: 35px" v-if="lazyGuy"> unfinished tasks: </h2>
         <li class="list-group-item" v-for="(item,index) in list" :key="index">
             <input class="bi bi-check2-square" type="checkbox" v-model="item.checked" @change="taskDone(item,index)">
-            {{item.text}}
+            {{item.text}} {{item.emoji}}
         </li>
 
-        <h2 style="margin: 35px" v-if=" hardWorking">finished tasks: </h2>
+        <h2 style="margin: 35px" v-if="hardWorking">finished tasks: </h2>
 
-        <li class="list-group-item" v-for="(doneItem, index) in doneList" :key="index">
+        <li style="text-decoration: line-through;" class="list-group-item" v-for="(doneItem, index) in doneList"
+            :key="index">
             <input class="bi bi-check2-square" type="checkbox" v-model="doneItem.checked"
                 @change="taskNotDone(doneItem,index)">
             {{doneItem.text}}
@@ -75,8 +77,6 @@
     <button v-if="lazyGuy" style="margin: 100px;" class="btn btn-danger" @click="deleteNotDone"><i
             class="bi bi-trash3"></i>
         delete unfinished tasks </button>
-    <!-- Example split danger button -->
-
 
 </body>
 
