--- a/index.html
+++ b/index.html
@@ -13,18 +13,33 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap-switch-button@1.1.0/css/bootstrap-switch-button.min.css"
+        rel="stylesheet">
+    <script
+        src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap-switch-button@1.1.0/dist/bootstrap-switch-button.min.js"></script>
 </head>
 
-<body id="app">
+<body style="margin: 100px" id="app">
     <h1>To-do-List</h1>
+
+    <div class="form-check form-switch">
+        <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" role="switch" :checked="state.darkmode"
+                @change="darkmodeSwitch" />
+            <i v-if="!state.darkmode" class="bi bi-moon-stars-fill"></i>
+            <i v-if="state.darkmode" class="bi bi-brightness-high"></i>
+        </label>
+    </div>
     <!--  <h3 v-if="showListComp"> {{ storageItem.anotherToDoList }} </h3> -->
     <h2>
         <div class="btn-group">
+
             <button type="button" class="btn btn-info">LISTS</button>
             <button @click="getLists" type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
             </button>
+
             <ul class="dropdown-menu" @click.stop>
                 <li>
                     <a class="dropdown-item" href="#">
@@ -49,20 +64,20 @@
         </div>
     </h2>
     <input type="text" placeholder="e.g.:  4 banana " v-model=" toDoInput" @change="newInput">
-    <ul class="list-group list-group-flush">
+    <ul style="cursor: pointer" class="list-group list-group-flush">
         <h2 style="margin: 35px" v-if="lazyGuy"> unfinished tasks: </h2>
         <li class="list-group-item" v-for="(item,index) in list" :key="index">
-            <input class="bi bi-check2-square" type="checkbox" v-model="item.checked" @change="taskDone(item,index)">
-            {{ item.quantity }}x {{ item.text }} {{ item.emoji }}
+            <input class="bi bi-check2-square" type="checkbox" v-model="item.checked" @change="taskDone(item, index)">
+            {{item.quantity}}x {{ item.text }} {{item.emoji}}
+            <button class="btn btn-danger btn-sm float-end" @click="deleteTask(index)">Löschen</button>
         </li>
 
         <h2 style="margin: 35px" v-if="hardWorking">finished tasks: </h2>
 
         <li style="text-decoration: line-through;" class="list-group-item" v-for="(doneItem, index) in doneList"
             :key="index">
-            <input class="bi bi-check2-square" type="checkbox" v-model="doneItem.checked"
-                @change="taskNotDone(doneItem,index)">
-            {{doneItem.text}} {{doneItem.emoji}}
+            <input class="bi bi-check2-square" type="checkbox" v-mod @change="taskNotDone(doneItem,index)">
+            {{doneItem.quantity}} x {{doneItem.text}} {{doneItem.emoji}}
         </li>
     </ul>
     <button style="margin: 100px;" class="btn btn-primary" type="button" @click="saveTasks"><i
