--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <li class="list-group-item" v-for="(item,index) in list" :key="index">
             <input class="bi bi-check2-square" type="checkbox" v-model="item.checked" @change="taskDone(item, index)">
             {{item.quantity}}x {{ item.text }} {{item.emoji}}
-            <button class="btn btn-danger btn-sm float-end" @click="deleteTask(index)">Löschen</button>
+            <button class="btn btn-danger btn-sm float-end" @click="deleteTask(index)"><i
+                    class="bi bi-trash3-fill"></i></button>
         </li>
 
         <h2 style="margin: 35px" v-if="hardWorking">finished tasks: </h2>
