--- a/index.html
+++ b/index.html
@@ -64,20 +64,21 @@
         </div>
     </h2>
     <input type="text" placeholder="e.g.:  4 banana " v-model=" toDoInput" @change="newInput">
-    <ul style="cursor: pointer" class="list-group list-group-flush">
+    <ul style="cursor: move" class="list-group list-group-flush">
         <h2 style="margin: 35px" v-if="lazyGuy"> unfinished tasks: </h2>
-        <li class="list-group-item" v-for="(item,index) in list" :key="index">
+        <li class="list-group-item" v-for="(item,index) in list" :key="index" draggable="true"
+            @dragstart="dragStart(index)" @dragover.prevent @drop="drop(index)">
             <input class="bi bi-check2-square" type="checkbox" v-model="item.checked" @change="taskDone(item, index)">
             {{item.quantity}}x {{ item.text }} {{item.emoji}}
-            <button class="btn btn-danger btn-sm float-end" @click="deleteTask(index)"><i
-                    class="bi bi-trash3-fill"></i></button>
+            <button class="btn btn-danger btn-sm float-end" @click="deleteTask(index)">Löschen</button>
         </li>
 
         <h2 style="margin: 35px" v-if="hardWorking">finished tasks: </h2>
 
         <li style="text-decoration: line-through;" class="list-group-item" v-for="(doneItem, index) in doneList"
             :key="index">
-            <input class="bi bi-check2-square" type="checkbox" v-mod @change="taskNotDone(doneItem,index)">
+            <input class="bi bi-check2-square" type="checkbox" @change="taskNotDone(doneItem,index)" checked
+                v-model="doneItem">
             {{doneItem.quantity}} x {{doneItem.text}} {{doneItem.emoji}}
         </li>
     </ul>
